Added static final and changed names by constant convention in Java. Added chaining in some method